# acquire

./: .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  PWA_SETUP.md  README.md  RUST_SERVER.md  SETUP.md  build.js  hardhat.config.js  notification-server.js  package-lock.json  package.json
contracts/: AcquireGame.sol
deployments/: baseSepolia.json
frontend/: AcquireGame.abi.json  app.js  auth.js  blockchain.js  dynamic-auth.bundle.js  dynamic-auth.js  dynamic-init.js  dynamic-widget.js  index.html  manifest.json  notifications.js  sw.js
scripts/: deploy.js
src/: game_db.rs  main.rs  player_notifications.rs
